# iced_waveform

./: .gitignore  Cargo.toml
examples/: demo.rs
src/: curve.rs  error.rs  lib.rs  lod.rs  pipeline.rs  shader.wgsl  state.rs  widget.rs
src/pipeline/: grid.rs  primitive.rs  program.rs  waveform.rs
