[package]
name = "iced_waveform"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
env_logger = "0.11.10"
iced = { version = "0.14.0", features = ["advanced", "wgpu"] }
jiff = "0.2.24"
log = "0.4.29"
palette = "0.7.6"
parking_lot = "0.12.5"
thiserror = "2.0.18"
iced_wgpu = "0.14"

[[example]]
name = "demo"
